# DSP_Sketchbook

./: .gitignore  README.md
DSP_Sketchbook/: DSP_Sketchbook.cpp  DSP_Sketchbook.h
DSP_Sketchbook/App/: AppDecl.h  Context.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
DSP_Sketchbook/Engine/: Engine.h  Module.cpp  Module.h  ParameterLoading.h  Voices.h
DSP_Sketchbook/Modules/: DelayModule.cpp  DelayModule.h  DistortionModule.h  EnvelopeModule.cpp  EnvelopeModule.h  FX.h  LfoModule.cpp  LfoModule.h  ReverbModule.cpp  ReverbModule.h  Sampler.cpp  Sampler.hpp  SamplerModule.cpp  SamplerModule.hpp  SimpleOscModule.h
DSP_Sketchbook/Resources/BinaryData/: DSP_SKETCHBOOK_BINARY.cpp  DSP_SKETCHBOOK_BINARY.h
DSP_Sketchbook/UI/: KeyboardWindow.cpp  KeyboardWindow.h  LookAndFeel.h  ParamaterPages.h  PluginUIPages.cpp  PluginUIPages.h  PluginUi.h  ScopeComponent.cpp  ScopeComponent.h  Slider.cpp  Slider.h  StyledSlider.h
Examples/CMake Template/: CMakeLists.txt
Examples/CMake Template/Source/: CustomModule.cpp  CustomModule.h
Examples/Projucer Template/: DSP Sketchbook.jucer
Examples/Projucer Template/Source/: CustomModule.h
Templates/Projucer Template/Source/: CustomModule.h
